# qoom

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: box.glb  test.glb
blender/: box.blend  test.blend
levels/: level.ini
shaders/: env_sky.frag  env_sky.vert  pbr.frag  pbr.vert  shadow.frag  shadow.vert
src/: assimp_model.cpp  assimp_model.h  controller.cpp  controller.h  environment.cpp  environment.h  level.cpp  level.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  stb_image_impl.cpp  voxel_world.cpp  voxel_world.h
